# discord-dynamic-status-wayland

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
nix/: home-manager.nix  package.nix
src/: constants.rs  debounce.rs  logger.rs  main.rs  rules.rs  system.rs  templates.rs  utils.rs
src/config/: default-config.json  default-config.toml  loader.rs  mod.rs  path.rs
src/discord/: activity.rs  rpc.rs
src/wm/: hyprland.rs  mod.rs  niri.rs
